--- a/src/pages/Home/liveChartSection/chartBlock/styles.module.scss
+++ b/src/pages/Home/liveChartSection/chartBlock/styles.module.scss
@@ -6,8 +6,8 @@
 
   @include tablet {
     margin-top: 24px;
+    margin-bottom: 12px;
     flex-direction: column;
-    gap: 12px;
   }
 }
 
