--- a/src/pages/Home/liveChartSection/numbersBlock/styles.module.scss
+++ b/src/pages/Home/liveChartSection/numbersBlock/styles.module.scss
@@ -4,6 +4,7 @@
 .wrapper {
   display: flex;
   flex-direction: column;
+  margin: 48px 0;
   gap: 32px;
 
   @include tablet {
