--- a/src/pages/Home/liveChartSection/styles.module.scss
+++ b/src/pages/Home/liveChartSection/styles.module.scss
@@ -26,7 +26,6 @@
 .blockWrapper {
   display: flex;
   flex-direction: column;
-  gap: 48px;
 }
 
 .text {
